Reorder and parent architecture

--- a/index.html
+++ b/index.html
@@ -138,46 +138,51 @@
         </section>
 
         <section data-transition="concave" data-state="img-left" data-background="img/architecture_diagram.png" data-background-transition="slide" data-background-size="30%">
-        <section>
-            <h2>What does it look like?</h2>
-          <ul style="margin-left:30%">
-            <li class="fragment">Databases
-              <ul>
-                <li class="fragment">Postgres with PostGIS plugin</li>
-                <li class="fragment">Read only from our perspective</li>
-              </ul>
-            </li>
-            <li class="fragment">Application Server
-              <ul>
-                <li class="fragment">PHP based REST API</li>
-                <li class="fragment">Restler framework chosen</li>
-                <li class="fragment">Server deployed through Portal</li>
-              </ul>
-            </li>
-            <li class="fragment">Client Application
-              <ul>
-                <li class="fragment">Consume our REST API</li>
-                <li class="fragment">Draw data from API onto map provided by Google</li>
-                  <li class="fragment">The App was published through Google Play Store</li>
-              </ul>
-            </li>
-          </ul>
 
-            <!--<img src="img/architecture_diagram.png" />-->
+          <section>
+          <h2>Conceptual</h2>
+          </section>
 
-            <aside class="notes">
-              OWNER: Loc
+          <section>
+              <h2>Architecture</h2>
+            <ul style="margin-left:30%">
+              <li class="fragment">Databases
+                <ul>
+                  <li class="fragment">Postgres with PostGIS plugin</li>
+                  <li class="fragment">Read only from our perspective</li>
+                </ul>
+              </li>
+              <li class="fragment">Application Server
+                <ul>
+                  <li class="fragment">PHP based REST API</li>
+                  <li class="fragment">Restler framework chosen</li>
+                  <li class="fragment">Server deployed through Portal</li>
+                </ul>
+              </li>
+              <li class="fragment">Client Application
+                <ul>
+                  <li class="fragment">Consume our REST API</li>
+                  <li class="fragment">Draw data from API onto map provided by Google</li>
+                    <li class="fragment">The App was published through Google Play Store</li>
+                </ul>
+              </li>
+            </ul>
 
-                Our data is postgre with postGIS plugin, we only read the data
+              <!--<img src="img/architecture_diagram.png" />-->
 
-                The server is written by PHP language bases REST API with Restler framework
+              <aside class="notes">
+                OWNER: Loc
 
-                The app talks to the server via Rest API, the map layout provided via Google Maps API
+                  Our data is postgre with postGIS plugin, we only read the data
 
-                The app was published in Google Play Store, if you're unclear about the functionality of the app,
-                you can download the app at URL above into your phone and play with it.
-            </aside>
-        </section>
+                  The server is written by PHP language bases REST API with Restler framework
+
+                  The app talks to the server via Rest API, the map layout provided via Google Maps API
+
+                  The app was published in Google Play Store, if you're unclear about the functionality of the app,
+                  you can download the app at URL above into your phone and play with it.
+              </aside>
+          </section>
         </section>
 
         <section>
@@ -409,30 +414,6 @@
           </section>
 
           <section>
-              <h2>What we learned</h2>
-              <p>
-              <ul>
-                  <li>Backend Lessons:</li>
-                  <ul><li>We learned how to code in PHP</li></ul>
-                  <ul><li>We learned about model/view controller coding</li></ul>
-                  <ul><li>We learned how to work with behavior driven development testing tools</li></ul>
-                  <li>Frontend Lessons:</li>
-                  <ul><li>We learned how to code an android app</li></ul>
-                  <ul><li>We learned about the importance of Google API keys</li></ul>
-                  <ul><li>We learned how to setup a continuous integration service</li></ul>
-                  <li>Group Lessons:</li>
-                  <ul><li>We worked on a group coding project for the first time</li></ul>
-                  <ul><li>We learned about rest-ful api construction</li></ul>
-                  <ul><li>We learned about how to use GitHub and merge requests and the importance of code reviews</li></ul>
-              </ul>
-              </p>
-
-              <aside class="notes">
-                OWNER: Jesse
-              </aside>
-          </section>
-
-          <section>
             <h2>What we would've done differently</h2>
             <p>
             <ul>
@@ -542,22 +523,43 @@
 
             </aside>
           </section>
-        </section>
 
-        <section>
-            <h2>Conclusion</h2>
-            <p>
-            <ul>
-			<li class="fragment">Any Questions?
-            </ul>
-            </p>
+          <section>
+              <h2>What we learned</h2>
+              <p>
+              <ul>
+                  <li>Backend Lessons:</li>
+                  <ul><li>We learned how to code in PHP</li></ul>
+                  <ul><li>We learned about model/view controller coding</li></ul>
+                  <ul><li>We learned how to work with behavior driven development testing tools</li></ul>
+                  <li>Frontend Lessons:</li>
+                  <ul><li>We learned how to code an android app</li></ul>
+                  <ul><li>We learned about the importance of Google API keys</li></ul>
+                  <ul><li>We learned how to setup a continuous integration service</li></ul>
+                  <li>Group Lessons:</li>
+                  <ul><li>We worked on a group coding project for the first time</li></ul>
+                  <ul><li>We learned about rest-ful api construction</li></ul>
+                  <ul><li>We learned about how to use GitHub and merge requests and the importance of code reviews</li></ul>
+              </ul>
+              </p>
 
-            <aside class="notes">
-              OWNER: JESSE
+              <aside class="notes">
+                OWNER: Jesse
+
               For most of us, this was the first time we had worked on a group coding project. we had some issues with communication between
 			  different team members and teams but we worked hard at it and things got better. many of us had never coded for an android app
 			  or setup a web server before and now we have gained skills we can hopefully use after school. This has been a rewarding 
 			  experience for all of us and we hope our project is useful. Thank you
+              </aside>
+          </section>
+
+        </section>
+
+        <section>
+            <h2>Any Questions?</h2>
+
+            <aside class="notes">
+              OWNER: JESSE
             </aside>
         </section>
 
