take out fragment

--- a/index.html
+++ b/index.html
@@ -145,24 +145,24 @@
           <section data-transition="concave" data-state="img-left" data-background="img/architecture_diagram.png" data-background-transition="slide" data-background-size="30%">
             <h2>Architecture</h2>
             <ul style="margin-left:30%">
-              <li class="fragment">Databases
+              <li >Databases
                 <ul>
-                  <li class="fragment">Postgres with PostGIS plugin</li>
-                  <li class="fragment">Read only from our perspective</li>
+                  <li >Postgres with PostGIS plugin</li>
+                  <li >Read only from our perspective</li>
                 </ul>
               </li>
-              <li class="fragment">Application Server
+              <li >Application Server
                 <ul>
-                  <li class="fragment">PHP based REST API</li>
-                  <li class="fragment">Restler framework chosen</li>
-                  <li class="fragment">Server deployed through Portal</li>
+                  <li >PHP based REST API</li>
+                  <li >Restler framework chosen</li>
+                  <li >Server deployed through Portal</li>
                 </ul>
               </li>
-              <li class="fragment">Client Application
+              <li >Client Application
                 <ul>
-                  <li class="fragment">Consume our REST API</li>
-                  <li class="fragment">Draw data from API onto map provided by Google</li>
-                    <li class="fragment">The App was published through Google Play Store</li>
+                  <li >Consume our REST API</li>
+                  <li >Draw data from API onto map provided by Google</li>
+                    <li >The App was published through Google Play Store</li>
                 </ul>
               </li>
             </ul>
@@ -174,12 +174,12 @@
 
                 Our data is postgre with postGIS plugin, we only read the data
 
-                The server is written by PHP language bases REST API with Restler framework
+                The server is written by PHP language bases REST API with Restler framework.
+                the server deployed through portal
 
                 The app talks to the server via Rest API, the map layout provided via Google Maps API
 
-                The app was published in Google Play Store, if you're unclear about the functionality of the app,
-                you can download the app at URL above into your phone and play with it.
+                The app was published in Google Play Store .
             </aside>
           </section>
         </section>
