Changed my slides for TransPort presentation

--- a/index.html
+++ b/index.html
@@ -57,11 +57,25 @@
           <p>By:<br/>Jesse Wagner, John Donahue, Josh Proehl, Loc Le, Nasim Sanati, Peter Gicking, Rob Werfelmann</p>
           <aside class="notes">
             OWNER: Rob
-            <p>Thanks for coming everyone! My name is Rob, I'm the
-            team lead for Team B. With me I have 6 developers: ---HAVE TEAM
-            INTRODUCE THEIR NAMES--- Tonight we'd like to proudly show you
-            the product we've all been hard at work on for the last 5
-            months: Routelandia.</p>
+            <p>
+              Thanks for coming everyone! My name is Rob. So at PSU, every
+              undergrad Computer Science student must complete a course
+              called the Software Engineering Capstone. It's a two quarter
+              long course where teams are made and each team picks a
+              project from sponsors like Kristin here. The goal of Capstone
+              is to give us soon to graduate students some experience in a
+              real-world software development project. I was chosen by our
+              department head to be the team lead. With me I have 6 hand
+              picked developers. ---INTRODUCTIONS--- Today we're going to
+              present to you the product we've all been working on for the
+              last 5 months: Routelandia.
+            </p>
+            
+            <!-- <p>Thanks for coming everyone! My name is Rob, I'm the -->
+            <!-- team lead for Team B. With me I have 6 developers: ---HAVE TEAM -->
+            <!-- INTRODUCE THEIR NAMES--- Tonight we'd like to proudly show you -->
+            <!-- the product we've all been hard at work on for the last 5 -->
+            <!-- months: Routelandia.</p> -->
           </aside>
         </section>
 
@@ -265,42 +279,63 @@
 
               <aside class="notes">
                 OWNER: Rob
-
                 <p>
-                  So, who did what? I split the teams up into three separate
-                  groups initially: Front-end, Back-end and UI design. UI
-                  design was a temporary team composed of Nasim and Jesse. They
-                  were responsible with coming up with the look of the
-                  front-end app. Once that was finished, I re-assigned Nasim to
-                  the front-end and Jesse to the back-end.
+                  So, how was the work divvied up? I split the team into
+                  two groups: front-end and back-end.
                 </p>
                 <p>NEXT FRAGMENT - PRESS DOWN!!!</p>
                 <p>
-                  The front-end was composed of Loc, John and later
-                  Nasim. Loc was put in charge of the sub-group and
-                  responsible for putting down the groundwork for the
-                  application. Nasim implemented several of the graphical
-                  features such as the splash screen, date and time picker,
-                  and statistics plot. John worked on testing and doing QA
-                  work.
+                  On the front-end we have Loc who handled the groundwork
+                  for much of the application. Nasim, who wrote several
+                  graphical features such as the start screen and time
+                  picker. And John who worked QA for the app.
                 </p>
                 <p>NEXT FRAGMENT - PRESS DOWN!!!</p>
                 <p>
-
-                  The back-end had Josh, Peter and then Jesse. Josh was the
-                  lead, bearded Wizard (their choice of title) and laid the
-                  foundation for the server application as well as writing
-                  the Postgres queries. Peter wrote lots of PHP code and took
-                  the lead with working with the Front-end and decided how
-                  the API structure would be implemented. When Jesse came on
-                  board, because of his experience writing test code at work,
-                  he took over the role of writing the entire test suite.
+                  On the back-end, Josh did much of the initial foundation
+                  of the PHP code and writing postgres queries. Peter wrote
+                  the bulk of the PHP code as well as cooridinating with
+                  the front-end on how the API structure would be
+                  implemented. Since Jesse had experience writing test code
+                  at his work, he took the role of writing the entire test
+                  suite.
                 </p>
+                <!-- <p> -->
+                <!--   So, who did what? I split the teams up into three separate -->
+                <!--   groups initially: Front-end, Back-end and UI design. UI -->
+                <!--   design was a temporary team composed of Nasim and Jesse. They -->
+                <!--   were responsible with coming up with the look of the -->
+                <!--   front-end app. Once that was finished, I re-assigned Nasim to -->
+                <!--   the front-end and Jesse to the back-end. -->
+                <!-- </p> -->
+                <!-- <p>NEXT FRAGMENT - PRESS DOWN!!!</p> -->
+                <!-- <p> -->
+                <!--   The front-end was composed of Loc, John and later -->
+                <!--   Nasim. Loc was put in charge of the sub-group and -->
+                <!--   responsible for putting down the groundwork for the -->
+                <!--   application. Nasim implemented several of the graphical -->
+                <!--   features such as the splash screen, date and time picker, -->
+                <!--   and statistics plot. John worked on testing and doing QA -->
+                <!--   work. -->
+                <!-- </p> -->
+                <!-- <p>NEXT FRAGMENT - PRESS DOWN!!!</p> -->
+                <!-- <p> -->
+
+                <!--   The back-end had Josh, Peter and then Jesse. Josh was the -->
+                <!--   lead, bearded Wizard (their choice of title) and laid the -->
+                <!--   foundation for the server application as well as writing -->
+                <!--   the Postgres queries. Peter wrote lots of PHP code and took -->
+                <!--   the lead with working with the Front-end and decided how -->
+                <!--   the API structure would be implemented. When Jesse came on -->
+                <!--   board, because of his experience writing test code at work, -->
+                <!--   he took over the role of writing the entire test suite. -->
+                <!-- </p> -->
               </aside>
             </section>
 
             <section>
-                <h2>Schedules and Process</h2>
+              <!-- <h2>Schedules and Process</h2> -->
+              <h2>Method and Process</h2>
                 <ul>
                   <li>"Full time Student" agile
                     <ul>
@@ -308,7 +343,7 @@
                       <li>Weekly meetings and goal setting</li>
                     </ul>
                   </li>
-                  <li>Schedule changes</li>
+                  <!-- <li>Schedule changes</li> -->
                   <li>Handoff process</li>
                 </ul>
 
@@ -322,12 +357,12 @@
                   meetings where we tracked our progress and set goals for
                   the following week.</p>
 
-                  <p>Since our last presentation, we've had a few changes to the
-                  schedule we laid out for ourselves. As stated earlier, we
-                  were unable to implement highway chaining, but refined our
-                  monthly milestones such as successfully drawing lines over
-                  the freeways where there was data and writing queries for
-                  route statistics.</p>
+                  <!-- <p>Since our last presentation, we've had a few changes to the -->
+                  <!-- schedule we laid out for ourselves. For example, we -->
+                  <!-- were unable to implement highway chaining, but refined our -->
+                  <!-- monthly milestones such as successfully drawing lines over -->
+                  <!-- the freeways where there was data and writing queries for -->
+                  <!-- route statistics.</p> -->
 
                   <p>Our handoff is pretty simple. Since our software is free,
                   Portal will only need to deploy a build on their servers
