Change architecture diagram to be img element

--- a/index.html
+++ b/index.html
@@ -156,32 +156,8 @@
             </aside>
           </section>
 
-          <section data-transition="concave" data-state="img-left" data-background="img/architecture_diagram.png" data-background-transition="slide" data-background-size="30%">
-            <h2>Architecture</h2>
-            <ul style="margin-left:30%">
-              <li >Databases
-                <ul>
-                  <li >Postgres with PostGIS plugin</li>
-                  <li >Read only from our perspective</li>
-                </ul>
-              </li>
-              <li >Application Server
-                <ul>
-                  <li >PHP based REST API</li>
-                  <li >Restler framework chosen</li>
-                  <li >Server deployed through Portal</li>
-                </ul>
-              </li>
-              <li >Client Application
-                <ul>
-                  <li >Consume our REST API</li>
-                  <li >Draw data from API onto map provided by Google</li>
-                    <li >The App was published through Google Play Store</li>
-                </ul>
-              </li>
-            </ul>
-
-            <!--<img src="img/architecture_diagram.png" />-->
+          <section data-transition="concave">
+            <img src="img/architecture_diagram.png" id="architecture_diagram" height="675" />
 
             <aside class="notes">
               OWNER: Loc
