Add images to demo slides

--- a/index.html
+++ b/index.html
@@ -179,8 +179,15 @@
             <h2>Demo</h2>
           </section>
 
+          <!--
+           Other images to use?
+           create mode 100644 img/barGraph.png
+           create mode 100644 img/errorMessage.png
+           create mode 100644 img/spinWheel.png
+          -->
+
           <section>
-            [ LAUNCH SCREENSHOT ]
+            <img src="img/startScreen.png" height="675" />
 
             <aside class="notes">
               OWNER: Josh
@@ -188,7 +195,7 @@
           </section>
 
           <section>
-            [ MAP SCREENSHOT ]
+            <img src="img/mapNoMarkers.png" height="675" />
 
             <aside class="notes">
               OWNER: Josh
@@ -196,7 +203,7 @@
           </section>
 
           <section>
-            [ MAP-WITH-POINTS SCREENSHOT ]
+            <img src="img/mapWithMarkers.png" height="675" />
 
             <aside class="notes">
               OWNER: Josh
@@ -204,7 +211,7 @@
           </section>
 
           <section>
-            [ TIME PICKER SCREENSHOT ]
+            <img src="img/timePicker.png" height="675" />
 
             <aside class="notes">
               OWNER: Josh
@@ -212,7 +219,7 @@
           </section>
 
           <section>
-            [ STATS CHART SCREENSHOT ]
+            <img src="img/barGraphAlt.png" height="675" />
 
             <aside class="notes">
               OWNER: Josh
@@ -220,7 +227,7 @@
           </section>
 
           <section>
-            [ STATS TABLE SCREENSHOT ]
+            <img src="img/statsTable.png" />
 
             <aside class="notes">
               OWNER: Josh
