Adding transitions. Demo gets unique bg.

--- a/index.html
+++ b/index.html
@@ -174,9 +174,9 @@
           </section>
         </section>
 
-        <section>
+        <section data-background="#666666" data-background-transition="zoom">
           <section>
-            <h2>Demo</h2>
+            <h2 style="color:white;">Demo</h2>
           </section>
 
           <!--
@@ -234,8 +234,8 @@
             </aside>
           </section>
         </section>
-          
-          <section>
+
+          <section data-background="#dddddd" data-background-transition="zoom" data-transition="zoom">
             <section><h2>Development</h2></section>
 
             <section>
@@ -402,7 +402,7 @@
         </section>
 
 
-        <section>
+        <section data-background="#dddddd" data-background-transition="convex" data-transition="convex">
 
           <section>
             <h2>Retrospective</h2>
@@ -572,7 +572,7 @@
 
         </section>
 
-        <section>
+        <section data-background="#dddddd" data-background-transition="concave" data-transition="concave">
             <h2>Any Questions?</h2>
 
             <aside class="notes">
