Update to new screenshots

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
           -->
 
           <section>
-            <img src="img/startScreen.png" height="675" />
+            <img src="img/loading_screen.png" height="675" />
 
             <aside class="notes">
               OWNER: Josh<br />
@@ -217,7 +217,7 @@
           </section>
 
           <section>
-            <img src="img/barGraphAlt.png" height="675" />
+            <img src="img/barGraphBigger.png" height="675" />
 
             <aside class="notes">
               OWNER: Josh<br />
