Add last slide google play and github icons

--- a/index.html
+++ b/index.html
@@ -553,6 +553,16 @@
         <section data-background="#dddddd" data-background-transition="concave" data-transition="concave">
             <h2>Any Questions?</h2>
 
+            <br />
+            <br />
+            <br />
+            <br />
+            <div>
+              <img src="img/google-play-icon.png" style="border-style:none;" /><br />
+              <img src="img/Octocat.png" width="100" style="border-style:none;" /><br />
+              http://routelandia.github.com
+            </div>
+
             <aside class="notes">
               OWNER: JESSE
             </aside>
