Reorder some bullets based on last rehersal

--- a/index.html
+++ b/index.html
@@ -347,6 +347,7 @@
               <h2>Tools Used</h2>
               <p>
                 <ul>
+                  <li>Postgres</li>
                   <li>Java
                     <ul>
                       <li>Android</li>
@@ -361,7 +362,13 @@
                       <li>behat</li>
                     </ul>
                   </li>
-                  <li>Postgres</li>
+                  <li>Github
+                    <ul>
+                      <li>Source Code Management</li>
+                      <li>Issue Tracking</li>
+                      <li>Code Reviews</li>
+                    </ul>
+                  </li>
                 </ul>
               </p>
               <aside class="notes">
@@ -398,12 +405,12 @@
           <section>
             <h2>Challenges</h2>
             <ul>
+              <li>Clicking near the line?</li>
               <li>Limited only to highway data
                 <ul>
                   <li>This was a deliberate choice</li>
                 </ul>
               </li>
-              <li>Clicking near the line?</li>
               <li>Currently cannot generate statistics across multiple highways</li>
             </ul>
 
