--- a/index.html
+++ b/index.html
@@ -531,17 +531,17 @@
               <p>
               <ul>
                   <li>Backend Lessons:</li>
-                  <ul><li>We learned how to code in PHP</li></ul>
-                  <ul><li>We learned about model/view controller coding</li></ul>
-                  <ul><li>We learned how to work with behavior driven development testing tools</li></ul>
+                  <ul><li>How to code in PHP</li></ul>
+                  <ul><li>About model/view controller coding</li></ul>
+                  <ul><li>How to work with behavior driven development testing tools</li></ul>
                   <li>Frontend Lessons:</li>
-                  <ul><li>We learned how to code an android app</li></ul>
-                  <ul><li>We learned about the importance of Google API keys</li></ul>
-                  <ul><li>We learned how to setup a continuous integration service</li></ul>
+                  <ul><li>How to code an android app</li></ul>
+                  <ul><li>The importance of Google API keys</li></ul>
+                  <ul><li>How to setup a continuous integration service</li></ul>
                   <li>Group Lessons:</li>
-                  <ul><li>We worked on a group coding project for the first time</li></ul>
-                  <ul><li>We learned about rest-ful api construction</li></ul>
-                  <ul><li>We learned about how to use GitHub and merge requests and the importance of code reviews</li></ul>
+                  <ul><li>Working on a group coding project for the first time</li></ul>
+                  <ul><li>About rest-ful api construction</li></ul>
+                  <ul><li>How to use GitHub and merge requests and the importance of code reviews</li></ul>
               </ul>
               </p>
 
