--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                     <ul>
                       <li>Josh is leader and bearded wizard</li>
                       <li>Peter is tall wizard. Wrote PHP and coordinated API structure with front-end</li>
-                      <li>Jesse is test wizard. Wrote wrote the testing enviornment</li>
+                      <li>Jesse is test wizard. Wrote the testing enviornment</li>
                     </ul>
                   </li>
                 </ul>
